# fjpantunes.github.io

./: .gitmodules  LICENSE  index.html  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: pelican.yml
content/escalada/: do-que-falo-escalada.md  escalada-notas.md
content/matematica/: do-que-falo-matematica.md
content/pages/: 1-about-site.md  2-about-author.md
docs/: archives.html  index.html
docs/category/: review.html
output/: authors.html  categories.html  my-first-review.html  tags.html
output/author/: felipe-antunes.html
